Did blog and cases section on home page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </header>
 
   <main>
+    <!-- About Icons -->
     <section id="about" class="icons bg-light">
       <div class="flex-items">
         <div>
@@ -57,6 +58,75 @@
         </div>
       </div>
     </section>
+
+        <!--About Solutions  -->
+        <section class="solutions flex-columns">
+          <div class="row">
+            <div class="column">
+              <div class="column-1">
+<img src="img/home/people.jpg" alt="">
+              </div>
+            </div>
+            <div class="column">
+              <div class="column-2 bg-primary">
+                <h4>What you are looking for</h4>
+                <h2>We provide bespoke solutions</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, facere, possimus voluptate quia voluptates, dignissimos eum nulla quo illo aliquid sit provident cumque tempora ut laborum enim culpa. Voluptatum, aliquid!</p>
+                <a href="#" class="btn btn-outline">
+                  <i class="fas fa-chevron-right"></i> Read More
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Cases -->
+        <section id="cases" class="cases flex-grid section-padding">
+          <header class="section-header">
+            <h4>This is what we do</h4>
+            <h2>Business Cases</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!</p>
+          </header>
+          <div class="row">
+            <div class="column">
+              <img src="img/cases/cases1.jpg" alt="">
+              <img src="img/cases/cases2.jpg" alt="">
+            </div>
+            <div class="column">
+              <img src="img/cases/cases3.jpg" alt="">
+              <img src="img/cases/cases4.jpg" alt="">
+            </div>
+            <div class="column">
+              <img src="img/cases/cases5.jpg" alt="">
+              <img src="img/cases/cases6.jpg" alt="">
+            </div>
+            <div class="column">
+              <img src="img/cases/cases7.jpg" alt="">
+              <img src="img/cases/cases8.jpg" alt="">
+            </div>
+          </div>
+        </section>
+
+        <!--blog  -->
+        <section id="blog" class="blog flex-columns flex-reverse">
+          <div class="row">
+            <div class="column">
+              <div class="column-1">
+<img src="img/home/blog.jpg" alt="">
+              </div>
+            </div>
+            <div class="column">
+              <div class="column-2 bg-secondary">
+                <h4>July 7 2020</h4>
+                <h2>Blog Post One</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto autem quis doloribus dignissimos aperiam mollitia nisi, deleniti atque a corrupti similique ipsum quo nemo eius totam, tempore quibusdam, delectus ducimus?</p>
+                <a href="#" class="btn btn-outline">
+                  <i class="fas fa-chevron-right"></i> Read Our Blog
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
   </main>
 </body>
 </html>
