Implemented blog page and post page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h4>July 7 2020</h4>
                 <h2>Blog Post One</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto autem quis doloribus dignissimos aperiam mollitia nisi, deleniti atque a corrupti similique ipsum quo nemo eius totam, tempore quibusdam, delectus ducimus?</p>
-                <a href="#" class="btn btn-outline">
+                <a href="blog.html" class="btn btn-outline">
                   <i class="fas fa-chevron-right"></i> Read Our Blog
                 </a>
               </div>
