--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,12 @@
   <link rel="stylesheet" href="/css/styles.css">
   <title>Read Our Blog</title>
 </head>
+
 <body id="home">
   <header class="hero blog">
-    <div id="navbar" class="navbar">
+    <div id="navbar" class="navbar top">
       <h1 class="logo">
-    <span class="text-primary"><i class="fas fa-book-open"></i>Edge</span>Ledger
+        <span class="text-primary"><i class="fas fa-book-open"></i>Edge</span>Ledger
       </h1>
       <nav>
         <ul>
@@ -25,7 +27,7 @@
       </nav>
     </div>
     <div class="content">
-      <h1>Blog</h1>      
+      <h1>Blog</h1>
     </div>
   </header>
 
@@ -35,7 +37,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-<img src="img/blog/blog1.jpg" alt="">
+            <img src="img/blog/blog1.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -44,7 +46,9 @@
             <p class="meta">
               <i class="fas fa-user"></i> Posted by <strong>James Madison</strong> | April 26 2020
             </p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, facere, possimus voluptate quia voluptates, dignissimos eum nulla quo illo aliquid sit provident cumque tempora ut laborum enim culpa. Voluptatum, aliquid!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, facere, possimus voluptate quia
+              voluptates, dignissimos eum nulla quo illo aliquid sit provident cumque tempora ut laborum enim culpa.
+              Voluptatum, aliquid!</p>
             <a href="post.html" class="btn btn-dark">
               <i class="fas fa-chevron-right"></i> Read More
             </a>
@@ -57,7 +61,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-<img src="img/blog/blog2.jpg" alt="">
+            <img src="img/blog/blog2.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -66,7 +70,9 @@
             <p class="meta">
               <i class="fas fa-user"></i> Posted by <strong>Rosalind Franklin</strong> | May 5 2020
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit tenetur, quaerat reiciendis exercitationem eum aut ipsum explicabo aspernatur quod magni illum minus sequi at, corrupti numquam hic corporis eos? Assumenda.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit tenetur, quaerat reiciendis
+              exercitationem eum aut ipsum explicabo aspernatur quod magni illum minus sequi at, corrupti numquam hic
+              corporis eos? Assumenda.</p>
             <a href="post.html" class="btn btn-light">
               <i class="fas fa-chevron-right"></i> Read More
             </a>
@@ -79,7 +85,7 @@
       <div class="row">
         <div class="column">
           <div class="column-1">
-<img src="img/blog/blog3.jpg" alt="">
+            <img src="img/blog/blog3.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -88,7 +94,9 @@
             <p class="meta">
               <i class="fas fa-user"></i> Posted by <strong>William Grove</strong> | May 17 2020
             </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus eum obcaecati ab error, labore eius? Accusamus voluptate nemo odio quibusdam labore earum magni, maxime vero rem veritatis omnis, est magnam?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus eum obcaecati ab error, labore eius?
+              Accusamus voluptate nemo odio quibusdam labore earum magni, maxime vero rem veritatis omnis, est magnam?
+            </p>
             <a href="post.html" class="btn btn-dark">
               <i class="fas fa-chevron-right"></i> Read More
             </a>
@@ -107,5 +115,28 @@
     </div>
     <p>Copyright &copy; 2020 - EdgeLedger</p>
   </footer>
+
+  <script>
+    const navbar = document.getElementById('navbar');
+    let scrolled = false;
+
+    window.onscroll = function () {
+      if (window.pageYOffset > 100) {
+        navbar.classList.remove('top');
+        if (!scrolled) {
+          navbar.style.transform = 'translateY(-70px)';
+        }
+        setTimeout(function () {
+          navbar.style.transform = 'translateY(0px)';
+          scrolled = true;
+        }, 200)
+      }
+      else {
+        navbar.classList.add('top');
+        scrolled = false;
+      }
+    }
+  </script>
 </body>
+
 </html>
