--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+  <link rel="stylesheet" href="/css/lightbox.min.css">
   <link rel="stylesheet" href="/css/utilities.css">
   <link rel="stylesheet" href="/css/styles.css">
   <title>Welcome to EdgeLedger</title>
 </head>
+
 <body id="home">
   <header class="hero">
-    <div id="navbar" class="navbar">
+    <div id="navbar" class="navbar top">
       <h1 class="logo">
-    <span class="text-primary"><i class="fas fa-book-open"></i>Edge</span>Ledger
+        <span class="text-primary"><i class="fas fa-book-open"></i>Edge</span>Ledger
       </h1>
       <nav>
         <ul>
@@ -41,7 +46,7 @@
             <h3>Investment Banking</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, beatae?</p>
           </div>
-        </div>           
+        </div>
         <div>
           <i class="fas fa-book-reader fa-2x"></i>
           <div>
@@ -59,131 +64,164 @@
       </div>
     </section>
 
-        <!--About Solutions  -->
-        <section class="solutions flex-columns">
-          <div class="row">
-            <div class="column">
-              <div class="column-1">
-<img src="img/home/people.jpg" alt="">
-              </div>
-            </div>
-            <div class="column">
-              <div class="column-2 bg-primary">
-                <h4>What you are looking for</h4>
-                <h2>We provide bespoke solutions</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, facere, possimus voluptate quia voluptates, dignissimos eum nulla quo illo aliquid sit provident cumque tempora ut laborum enim culpa. Voluptatum, aliquid!</p>
-                <a href="#" class="btn btn-outline">
-                  <i class="fas fa-chevron-right"></i> Read More
-                </a>
-              </div>
-            </div>
+    <!--About Solutions  -->
+    <section class="solutions flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="img/home/people.jpg" alt="">
           </div>
-        </section>
-
-        <!-- Cases -->
-        <section id="cases" class="cases flex-grid section-padding">
-          <header class="section-header">
-            <h4>This is what we do</h4>
-            <h2>Business Cases</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!</p>
-          </header>
-          <div class="row">
-            <div class="column">
-              <img src="img/cases/cases1.jpg" alt="">
-              <img src="img/cases/cases2.jpg" alt="">
-            </div>
-            <div class="column">
-              <img src="img/cases/cases3.jpg" alt="">
-              <img src="img/cases/cases4.jpg" alt="">
-            </div>
-            <div class="column">
-              <img src="img/cases/cases5.jpg" alt="">
-              <img src="img/cases/cases6.jpg" alt="">
-            </div>
-            <div class="column">
-              <img src="img/cases/cases7.jpg" alt="">
-              <img src="img/cases/cases8.jpg" alt="">
-            </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-primary">
+            <h4>What you are looking for</h4>
+            <h2>We provide bespoke solutions</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, facere, possimus voluptate quia
+              voluptates, dignissimos eum nulla quo illo aliquid sit provident cumque tempora ut laborum enim culpa.
+              Voluptatum, aliquid!</p>
+            <a href="#" class="btn btn-outline">
+              <i class="fas fa-chevron-right"></i> Read More
+            </a>
           </div>
-        </section>
+        </div>
+      </div>
+    </section>
 
-        <!--blog  -->
-        <section id="blog" class="blog flex-columns flex-reverse">
-          <div class="row">
-            <div class="column">
-              <div class="column-1">
-<img src="img/home/blog.jpg" alt="">
-              </div>
-            </div>
-            <div class="column">
-              <div class="column-2 bg-secondary">
-                <h4>July 7 2020</h4>
-                <h2>Blog Post One</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto autem quis doloribus dignissimos aperiam mollitia nisi, deleniti atque a corrupti similique ipsum quo nemo eius totam, tempore quibusdam, delectus ducimus?</p>
-                <a href="blog.html" class="btn btn-outline">
-                  <i class="fas fa-chevron-right"></i> Read Our Blog
-                </a>
-              </div>
-            </div>
+    <!-- Cases -->
+    <section id="cases" class="cases flex-grid section-padding">
+      <header class="section-header">
+        <h4>This is what we do</h4>
+        <h2>Business Cases</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!</p>
+      </header>
+      <div class="row">
+        <div class="column">
+          <a href="img/cases/cases1.jpg" data-lightbox="cases"
+            data-title="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!">
+            <img src="img/cases/cases1.jpg" alt="">
+          </a>
+
+          <a href="img/cases/cases2.jpg" data-lightbox="cases"
+            data-title="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!">
+            <img src="img/cases/cases2.jpg" alt="">
+          </a>
+
+        </div>
+        <div class="column">
+          <a href="img/cases/cases3.jpg" data-lightbox="cases"
+            data-title="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!">
+            <img src="img/cases/cases3.jpg" alt="">
+          </a>
+
+          <a href="img/cases/cases4.jpg" data-lightbox="cases"
+            data-title="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!">
+            <img src="img/cases/cases4.jpg" alt="">
+          </a>
+        </div>
+        <div class="column">
+          <a href="img/cases/cases5.jpg" data-lightbox="cases"
+            data-title="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!">
+            <img src="img/cases/cases5.jpg" alt="">
+          </a>
+
+          <a href="img/cases/cases6.jpg" data-lightbox="cases"
+            data-title="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!">
+            <img src="img/cases/cases6.jpg" alt="">
+          </a>
+        </div>
+        <div class="column">
+          <a href="img/cases/cases7.jpg" data-lightbox="cases"
+            data-title="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!">
+            <img src="img/cases/cases7.jpg" alt="">
+          </a>
+
+          <a href="img/cases/cases8.jpg" data-lightbox="cases"
+            data-title="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, mollitia!">
+            <img src="img/cases/cases8.jpg" alt="">
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!--blog  -->
+    <section id="blog" class="blog flex-columns flex-reverse">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="img/home/blog.jpg" alt="">
           </div>
-        </section>
-
-        <!-- Team -->
-        <section id="team" class="team  section-padding">
-          <header class="section-header">
-            <h4>Who we are</h4>
-            <h2>Our Professional Team</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, quaerat!</p>
-          </header>
-         <div class="flex-items">
-           <div>
-             <img src="img/team/person1.jpg" alt="">
-             <h4>James Madison</h4>
-             <p>President</p>
-           </div>
-           <div>
-             <img src="img/team/person2.jpg" alt="">
-             <h4>Rosalind Franklin</h4>
-             <p>Vice President</p>
-           </div>
-           <div>
-             <img src="img/team/person3.jpg" alt="">
-             <h4>William Grove</h4>
-             <p>Marketing Head</p>
-           </div>
-         </div>
-        </section>
-
-        <!-- contacts -->
-        <section id="contact" class="contact flex-columns">
-          <div class="row">
-            <div class="column">
-              <div class="column-1">
-<img src="img/home/contact.jpg" alt="">
-              </div>
-            </div>
-            <div class="column">
-              <div class="column-2 bg-light">
-                <h2>Request Callback</h2>
-                <form action="" class="callback-form">
-                  <div class="form-control">
-                    <label for="name"></label>
-                    <input type="text" name="name" id="name" placeholder="Enter name">
-                  </div>
-                  <div class="form-control">
-                    <label for="email"></label>
-                    <input type="email" name="email" id="email" placeholder="Enter email">
-                  </div>
-                  <div class="form-control">
-                    <label for="phone"></label>
-                    <input type="text" name="phone" id="phone" placeholder="Enter phone">
-                  </div>
-                  <input type="submit" value="send" id="submit" class="btn">
-                </form>
-              </div>
-            </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-secondary">
+            <h4>July 7 2020</h4>
+            <h2>Blog Post One</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto autem quis doloribus dignissimos
+              aperiam mollitia nisi, deleniti atque a corrupti similique ipsum quo nemo eius totam, tempore quibusdam,
+              delectus ducimus?</p>
+            <a href="blog.html" class="btn btn-outline">
+              <i class="fas fa-chevron-right"></i> Read Our Blog
+            </a>
           </div>
-        </section>
+        </div>
+      </div>
+    </section>
+
+    <!-- Team -->
+    <section id="team" class="team  section-padding">
+      <header class="section-header">
+        <h4>Who we are</h4>
+        <h2>Our Professional Team</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, quaerat!</p>
+      </header>
+      <div class="flex-items">
+        <div>
+          <img src="img/team/person1.jpg" alt="">
+          <h4>James Madison</h4>
+          <p>President</p>
+        </div>
+        <div>
+          <img src="img/team/person2.jpg" alt="">
+          <h4>Rosalind Franklin</h4>
+          <p>Vice President</p>
+        </div>
+        <div>
+          <img src="img/team/person3.jpg" alt="">
+          <h4>William Grove</h4>
+          <p>Marketing Head</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- contacts -->
+    <section id="contact" class="contact flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="img/home/contact.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-light">
+            <h2>Request Callback</h2>
+            <form action="" class="callback-form">
+              <div class="form-control">
+                <label for="name"></label>
+                <input type="text" name="name" id="name" placeholder="Enter name">
+              </div>
+              <div class="form-control">
+                <label for="email"></label>
+                <input type="email" name="email" id="email" placeholder="Enter email">
+              </div>
+              <div class="form-control">
+                <label for="phone"></label>
+                <input type="text" name="phone" id="phone" placeholder="Enter phone">
+              </div>
+              <input type="submit" value="send" id="submit" class="btn">
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer bg-dark">
@@ -195,5 +233,51 @@
     </div>
     <p>Copyright &copy; 2020 - EdgeLedger</p>
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+  <script src="js/lightbox.min.js"></script>
+
+  <script>
+    const navbar = document.getElementById('navbar');
+    let scrolled = false;
+
+    window.onscroll = function () {
+      if (window.pageYOffset > 100) {
+        navbar.classList.remove('top');
+        if (!scrolled) {
+          navbar.style.transform = 'translateY(-70px)';
+        }
+        setTimeout(function () {
+          navbar.style.transform = 'translateY(0px)';
+          scrolled = true;
+        }, 200)
+      }
+      else {
+        navbar.classList.add('top');
+        scrolled = false;
+      }
+    }
+
+    //smooth scrolling
+    $('#navbar a, .btn').on('click', function (e) {
+      if (this.hash != '') {
+        e.preventDefault();
+
+        const hash = this.hash;
+
+        $('html, body').animate(
+          {
+            scrollTop: $(hash).offset().top - 100,
+          },
+          800
+        );
+      }
+    });
+
+
+  </script>
 </body>
+
 </html>
